--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.5.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
