--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.5.0",
+    "browser-sync-client": "^2.26.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
