--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.5.0",
+    "bootstrap": "^4.3.1",
     "browser-sync-client": "^2.26.6",
+    "css-loader": "^3.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
